--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,9 +30,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  camera: ^0.10.6
+  camera: ^0.11.0
   file_picker: ^8.0.3
   image_picker: ^1.1.1
+  image_cropper: ^6.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
