--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   google_mlkit_text_recognition: ^0.13.0
   permission_handler: ^11.3.1
   path_drawing: ^1.0.1
+  firebase_core: ^2.31.1
 
 dev_dependencies:
   flutter_test:
