--- a/macos/Runner/GoogleService-Info.plist
+++ b/macos/Runner/GoogleService-Info.plist
@@ -26,5 +26,7 @@
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:139599775951:ios:900987fb16d18ef53dcfba</string>
+	<key>DATABASE_URL</key>
+	<string>https://food-scanner-33-default-rtdb.asia-southeast1.firebasedatabase.app</string>
 </dict>
 </plist>
