--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   permission_handler: ^11.3.1
   path_drawing: ^1.0.1
   firebase_core: ^2.31.1
+  firebase_database: ^10.5.7
 
 dev_dependencies:
   flutter_test:
