--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   image_cropper: ^6.0.0
   spell_check_on_client: ^0.0.8
   percent_indicator: ^4.2.3
+  showcaseview: ^3.0.0
+  carousel_slider: ^4.2.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
